Fix: Loading cid: resources in WebView.

A bug has been introduced in: https://crrev.com/2834013002.
The assumption that Content-ID URLs can't be loaded without an
MHTMLArchive doesn't hold. It is possible for instance with the Yahoo
Mail app. It embeds chrome as a Webview. The webview load attached image
with the Content-ID scheme.

This CL allows the load instead of blocking it.

BUG=739658
TBR=japhet@chromium.org

Review-Url: https://codereview.chromium.org/2975623002
Cr-Commit-Position: refs/heads/master@{#486796}

Former-commit-id: 2cccbe128c2425ab5d68c74af8760fe6a7af72f4